Multi-targeting is complete.  Cadence Net48 tests work for both but .NET Core 3.1 and .NET 5.0 still aren't working.  Temporal seems to have other issues as well.

--- a/Lib/Neon.Temporal/Neon.Temporal.csproj
+++ b/Lib/Neon.Temporal/Neon.Temporal.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1; netstandard2.0; net5.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <RootNamespace>Neon.Temporal</RootNamespace>
     <Version>2.14.0-alpha</Version>
