--- a/Lib/Neon.Identity/Neon.Identity.csproj
+++ b/Lib/Neon.Identity/Neon.Identity.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net50</TargetFramework>
     <OutputType>Library</OutputType>
     <Version>2.6.0</Version>
     <Authors>neonFORGE Team</Authors>
