--- a/Lib/Neon.Service/Neon.Service.csproj
+++ b/Lib/Neon.Service/Neon.Service.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net48; netcoreapp3.1; netstandard2.0; net50</TargetFrameworks>
     <OutputType>Library</OutputType>
     <RootNamespace>Neon.Service</RootNamespace>
     <Version>2.14.0</Version>
