--- a/Lib/Neon.Deployment/Neon.Deployment.csproj
+++ b/Lib/Neon.Deployment/Neon.Deployment.csproj
@@ -24,20 +24,12 @@
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageTags>deployment</PackageTags>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CodeDoc|AnyCPU'">
-    <DocumentationFile>bin\CodeDoc\Neon.Deployment.xml</DocumentationFile>
+    <DocumentationFile>$(OutDir)Neon.Deployment.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\Neon.Deployment.xml</DocumentationFile>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <NoWarn>1701;1702;CA1416</NoWarn>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\Neon.Deployment.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
