--- a/Lib/Neon.ModelGenerator/Neon.ModelGenerator.csproj
+++ b/Lib/Neon.ModelGenerator/Neon.ModelGenerator.csproj
@@ -26,6 +26,7 @@
     <FileVersion>0.0.0.0</FileVersion>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <DevelopmentDependency>true</DevelopmentDependency>
+    <DocumentationFile>$(OutDir)Neon.ModelGenerator.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
