--- a/Lib/Neon.Xunit.Cadence/Neon.Xunit.Cadence.csproj
+++ b/Lib/Neon.Xunit.Cadence/Neon.Xunit.Cadence.csproj
@@ -25,11 +25,11 @@
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageIcon>nuget-icon.png</PackageIcon>
     <PackageTags>xunit uber cadence workflow agent</PackageTags>
+    <DocumentationFile>$(OutDir)Neon.Xunit.Cadence.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <DocumentationFile>bin\Debug\Neon.Xunit.Cadence.xml</DocumentationFile>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors>NU1605</WarningsAsErrors>
     <NoWarn></NoWarn>
@@ -37,7 +37,6 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>TRACE;RELEASE</DefineConstants>
-    <DocumentationFile>bin\Release\Neon.Xunit.Cadence.xml</DocumentationFile>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors>NU1605</WarningsAsErrors>
     <NoWarn></NoWarn>
@@ -45,7 +44,6 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CodeDoc|AnyCPU'">
     <DefineConstants>TRACE;RELEASE</DefineConstants>
-    <DocumentationFile>bin\Release\Neon.Xunit.Cadence.xml</DocumentationFile>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors>NU1605</WarningsAsErrors>
     <NoWarn></NoWarn>
