--- a/Lib/Neon.YugaByte/Neon.YugaByte.csproj
+++ b/Lib/Neon.YugaByte/Neon.YugaByte.csproj
@@ -21,18 +21,7 @@
     <FileVersion>0.0.0.0</FileVersion>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\Neon.YugaByte.xml</DocumentationFile>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\Neon.YugaByte.xml</DocumentationFile>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CodeDoc|AnyCPU'">
-    <DocumentationFile>bin\Release\Neon.YugaByte.xml</DocumentationFile>
+    <DocumentationFile>$(OutDir)Neon.YugaByte.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
