added nodeports to deployments

--- a/Lib/Neon.Kube/Resources/Helm/grafana/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/grafana/values.yaml
@@ -109,10 +109,11 @@ podPortName: grafana
 ## ref: http://kubernetes.io/docs/user-guide/services/
 ##
 service:
-  type: ClusterIP
+  type: NodePort
   port: 80
   targetPort: 3000
     # targetPort: 4181 To be used with a proxy extraContainer
+  nodePort: 30001
   annotations: {}
   labels: {}
   portName: service
