--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/values.yaml
@@ -1501,7 +1501,7 @@ prometheus:
     ## Port to expose on each node
     ## Only used if service.type is 'NodePort'
     ##
-    nodePort: 30090
+    nodePort: 30007
 
     ## Loadbalancer IP
     ## Only use if service.type is "loadbalancer"
@@ -1509,7 +1509,7 @@ prometheus:
     loadBalancerSourceRanges: []
     ## Service type
     ##
-    type: ClusterIP
+    type: NodePort
 
     sessionAffinity: ""
 
