some deployment fixes

--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/values.yaml
@@ -1958,12 +1958,12 @@ prometheus:
     ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#remotereadspec
     remoteRead:
     - readRecent: true
-      url: http://neon-metrics-cortex:9009/api/prom/remote_read
+      url: http://cortex:9009/api/prom/remote_read
 
     ## The remote_write spec configuration for Prometheus.
     ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#remotewritespec
     remoteWrite:
-    - url: http://neon-metrics-cortex:9009/api/prom/push
+    - url: http://cortex:9009/api/prom/push
 
     ## Enable/Disable Grafana dashboards provisioning for prometheus remote write feature
     remoteWriteDashboards: false
