--- a/Lib/Neon.Kube/Resources/Helm/promtail/templates/servicemonitor.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/promtail/templates/servicemonitor.yaml
@@ -11,6 +11,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
+    instance: neon-monitor
     {{- include "promtail.labels" $ | nindent 4 }}
     {{- with .Values.serviceMonitor.labels }}
     {{- toYaml . | nindent 4 }}
