--- a/Lib/Neon.Kube/Resources/Helm/jaeger/templates/collector-servicemonitor.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/jaeger/templates/collector-servicemonitor.yaml
@@ -7,6 +7,7 @@ metadata:
   namespace: {{ .Values.collector.serviceMonitor.namespace }}
   {{- end }}
   labels:
+    instance: neon-monitor
     {{- include "jaeger.labels" . | nindent 4 }}
     app.kubernetes.io/component: collector
     {{- if .Values.collector.serviceMonitor.additionalLabels }}
