--- a/Lib/Neon.Kube/Resources/Helm/jaeger/templates/ingester-servicemonitor.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/jaeger/templates/ingester-servicemonitor.yaml
@@ -7,6 +7,7 @@ metadata:
   namespace: {{ .Values.ingester.serviceMonitor.namespace }}
   {{- end }}
   labels:
+    instance: neon-monitor
     {{- include "jaeger.labels" . | nindent 4 }}
     app.kubernetes.io/component: ingester
     {{- if .Values.ingester.serviceMonitor.additionalLabels }}
