--- a/Lib/Neon.Kube/Resources/Helm/loki/templates/servicemonitor.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/loki/templates/servicemonitor.yaml
@@ -4,6 +4,7 @@ kind: ServiceMonitor
 metadata:
   name: {{ template "loki.fullname" . }}
   labels:
+    instance: neon-monitor
     app: {{ template "loki.name" . }}
     chart: {{ template "loki.chart" . }}
     release: {{ .Release.Name }}
