--- a/Lib/Neon.Kube/Resources/Helm/minio/templates/servicemonitor.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/minio/templates/servicemonitor.yaml
@@ -11,6 +11,7 @@ metadata:
   namespace: {{ .Values.metrics.serviceMonitor.namespace }}
   {{- end }}
   labels:
+    instance: neon-monitor
     app: {{ template "minio.name" . }}
     chart: {{ template "minio.chart" . }}
     release: {{ .Release.Name }}
