--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/templates/exporters/kube-state-metrics/serviceMonitor.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/templates/exporters/kube-state-metrics/serviceMonitor.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ template "kube-prometheus-stack.fullname" . }}-kube-state-metrics
   namespace: {{ template "kube-prometheus-stack.namespace" . }}
   labels:
+    instance: neon-monitor
     app: {{ template "kube-prometheus-stack.name" . }}-kube-state-metrics
 {{ include "kube-prometheus-stack.labels" . | indent 4 }}
 spec:
