--- a/Lib/Neon.Kube/Resources/Helm/harbor/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/values.yaml
@@ -33,8 +33,8 @@ expose:
       notarySecretName: "neon-registry-harbor-internal"
   ingress:
     hosts:
-      core: neon-registry.node.local
-      notary: neon-notary.node.local
+      core: registry.{{ .Values.clusterDomain }}
+      notary: notary.{{ .Values.clusterDomain }}
     # set to the type of ingress controller if it has specific requirements.
     # leave as `default` for most ingress controllers.
     # set to `gce` if using the GCE ingress controller
@@ -105,7 +105,7 @@ expose:
 # the IP address of k8s node
 #
 # If Harbor is deployed behind the proxy, set it as the URL of proxy
-externalURL: https://neon-registry.node.local
+externalURL: https://registry.{{ .Values.clusterDomain }}
 
 # The internal TLS used for harbor components secure communicating. In order to enable https
 # in each components tls cert files need to provided in advance.
